--- a/src/Convertitore.form
+++ b/src/Convertitore.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Convertitore">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="conv" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="592" height="400"/>
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="67b8a" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="67b8a" class="javax.swing.JTextField" binding="decimale">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -18,20 +18,9 @@
           <background color="-1"/>
         </properties>
       </component>
-      <component id="48b15" class="javax.swing.JRadioButton" binding="ottaleRadioButton" default-binding="true">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-12961222"/>
-          <enabled value="true"/>
-          <foreground color="-1"/>
-          <text value="Ottale"/>
-        </properties>
-      </component>
       <component id="a8146" class="javax.swing.JButton" binding="converti">
         <constraints>
-          <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="100" height="100"/>
             <preferred-size width="100" height="100"/>
           </grid>
@@ -42,37 +31,29 @@
           <text value="Converti"/>
         </properties>
       </component>
-      <component id="d81db" class="javax.swing.JRadioButton" binding="decimaleRadioButton" default-binding="true">
+      <component id="395cf" class="javax.swing.JTextField" binding="ottale">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
         </constraints>
-        <properties>
-          <background color="-12961222"/>
-          <enabled value="true"/>
-          <foreground color="-1"/>
-          <text value="Decimale"/>
-        </properties>
+        <properties/>
       </component>
-      <component id="7f0dc" class="javax.swing.JRadioButton" binding="binarioRadioButton" default-binding="true">
+      <component id="3bdbe" class="javax.swing.JTextField" binding="binario">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
         </constraints>
-        <properties>
-          <background color="-12961222"/>
-          <enabled value="true"/>
-          <foreground color="-1"/>
-          <text value="Binario"/>
-        </properties>
+        <properties/>
       </component>
-      <component id="160d" class="javax.swing.JRadioButton" binding="esadecimaleRadioButton" default-binding="true">
+      <component id="9fed1" class="javax.swing.JTextField" binding="esadecimale">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
         </constraints>
-        <properties>
-          <background color="-12961222"/>
-          <foreground color="-1"/>
-          <text value="Esadecimale"/>
-        </properties>
+        <properties/>
       </component>
     </children>
   </grid>
