--- a/src/Convertitore.form
+++ b/src/Convertitore.form
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="67b8a" class="javax.swing.JTextField" binding="decimale">
+      <component id="67b8a" class="javax.swing.JTextField" binding="textField1">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -18,7 +18,7 @@
           <background color="-1"/>
         </properties>
       </component>
-      <component id="5660a" class="javax.swing.JTextField">
+      <component id="5660a" class="javax.swing.JTextField" binding="textField2">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
