--- a/src/Convertitore.form
+++ b/src/Convertitore.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Convertitore">
-  <grid id="27dc6" binding="conv" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="conv" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="40" left="40" bottom="40" right="40"/>
     <constraints>
-      <xy x="20" y="20" width="235" height="104"/>
+      <xy x="20" y="20" width="378" height="289"/>
     </constraints>
     <properties>
       <background color="-12961222"/>
@@ -12,40 +12,90 @@
     <children>
       <component id="67b8a" class="javax.swing.JTextField" binding="textField1">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="40"/>
+          </grid>
         </constraints>
         <properties>
-          <background color="-1"/>
-        </properties>
-      </component>
-      <component id="5660a" class="javax.swing.JTextField" binding="textField2">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-1"/>
+          <background color="-12105913"/>
+          <caretColor color="-12105913"/>
+          <disabledTextColor color="-12105913"/>
+          <doubleBuffered value="false"/>
+          <enabled value="true"/>
+          <foreground color="-1"/>
         </properties>
       </component>
       <component id="af027" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="60" height="40"/>
+          </grid>
         </constraints>
-        <properties/>
-      </component>
-      <component id="a8410" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
+        <properties>
+          <background color="-12105913"/>
+          <editable value="false"/>
+          <focusable value="false"/>
+          <foreground color="-1"/>
+          <opaque value="true"/>
+        </properties>
+        <clientProperties>
+          <html.disable class="java.lang.Boolean" value="false"/>
+        </clientProperties>
       </component>
       <component id="a8146" class="javax.swing.JButton" binding="converti">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="60" height="40"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-1092784"/>
           <foreground color="-1"/>
           <text value="Converti"/>
+        </properties>
+      </component>
+      <hspacer id="536e9">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="100" height="25"/>
+          </grid>
+        </constraints>
+      </hspacer>
+      <hspacer id="9e7f3">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="100" height="25"/>
+          </grid>
+        </constraints>
+      </hspacer>
+      <component id="a9aa4" class="javax.swing.JTextField" binding="textField2">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="40"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-12105913"/>
+          <caretColor color="-12105913"/>
+          <disabledTextColor color="-12105913"/>
+          <doubleBuffered value="false"/>
+          <enabled value="true"/>
+          <foreground color="-1"/>
+        </properties>
+      </component>
+      <component id="a8410" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="60" height="40"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-12105913"/>
+          <focusable value="false"/>
+          <foreground color="-1"/>
+          <inheritsPopupMenu value="false"/>
+          <lightWeightPopupEnabled value="true"/>
+          <opaque value="true"/>
         </properties>
       </component>
     </children>
