--- a/src/Convertitore.form
+++ b/src/Convertitore.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Convertitore">
-  <grid id="27dc6" binding="conv" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="Convertitore" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="40" left="40" bottom="40" right="40"/>
     <constraints>
       <xy x="20" y="20" width="378" height="289"/>
@@ -22,6 +22,7 @@
           <disabledTextColor color="-12105913"/>
           <doubleBuffered value="false"/>
           <enabled value="true"/>
+          <font name="Arial Black" size="18" style="0"/>
           <foreground color="-1"/>
         </properties>
       </component>
@@ -80,6 +81,7 @@
           <disabledTextColor color="-12105913"/>
           <doubleBuffered value="false"/>
           <enabled value="true"/>
+          <font name="Arial Black" size="18" style="0"/>
           <foreground color="-1"/>
         </properties>
       </component>
