--- a/src/Convertitore.form
+++ b/src/Convertitore.form
@@ -43,7 +43,7 @@
           <html.disable class="java.lang.Boolean" value="false"/>
         </clientProperties>
       </component>
-      <component id="a8146" class="javax.swing.JButton" binding="converti">
+      <component id="a8146" class="javax.swing.JButton" binding="converti" placeholder="Inserisci">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="60" height="40"/>
@@ -69,7 +69,7 @@
           </grid>
         </constraints>
       </hspacer>
-      <component id="a9aa4" class="javax.swing.JTextField" binding="textField2">
+      <component id="a9aa4" class="javax.swing.JTextField" binding="textField2" placeholder="Inserisci">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="40"/>
