--- a/src/Convertitore.form
+++ b/src/Convertitore.form
@@ -12,7 +12,7 @@
     <children>
       <component id="67b8a" class="javax.swing.JTextField" binding="textField1">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false" placeholder="Inserisci">
             <preferred-size width="200" height="40"/>
           </grid>
         </constraints>
