--- a/src/Convertitore.form
+++ b/src/Convertitore.form
@@ -12,7 +12,7 @@
     <children>
       <component id="67b8a" class="javax.swing.JTextField" binding="textField1">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false" placeholder="Inserisci">
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="40"/>
           </grid>
         </constraints>
@@ -44,9 +44,9 @@
           <html.disable class="java.lang.Boolean" value="false"/>
         </clientProperties>
       </component>
-      <component id="a8146" class="javax.swing.JButton" binding="converti" placeholder="Inserisci">
+      <component id="a8146" class="javax.swing.JButton" binding="converti">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="60" height="40"/>
           </grid>
         </constraints>
@@ -70,7 +70,7 @@
           </grid>
         </constraints>
       </hspacer>
-      <component id="a9aa4" class="javax.swing.JTextField" binding="textField2" placeholder="Inserisci">
+      <component id="a9aa4" class="javax.swing.JTextField" binding="textField2">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="40"/>
@@ -100,6 +100,18 @@
           <inheritsPopupMenu value="false"/>
           <lightWeightPopupEnabled value="true"/>
           <opaque value="true"/>
+        </properties>
+      </component>
+      <component id="87db2" class="javax.swing.JButton" binding="cancButton" default-binding="true">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="60" height="40"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-1092784"/>
+          <foreground color="-1"/>
+          <text value="Canc"/>
         </properties>
       </component>
     </children>
