--- a/src/Convertitore.form
+++ b/src/Convertitore.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Convertitore">
-  <grid id="27dc6" binding="Convertitore" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="Convertitore" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="40" left="40" bottom="40" right="40"/>
     <constraints>
-      <xy x="20" y="20" width="378" height="289"/>
+      <xy x="20" y="20" width="437" height="331"/>
     </constraints>
     <properties>
       <background color="-12961222"/>
@@ -12,7 +12,7 @@
     <children>
       <component id="67b8a" class="javax.swing.JTextField" binding="textField1">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="40"/>
           </grid>
         </constraints>
@@ -29,7 +29,7 @@
       </component>
       <component id="af027" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="60" height="40"/>
           </grid>
         </constraints>
@@ -46,7 +46,7 @@
       </component>
       <component id="a8146" class="javax.swing.JButton" binding="converti">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="60" height="40"/>
           </grid>
         </constraints>
@@ -56,23 +56,16 @@
           <text value="Converti"/>
         </properties>
       </component>
-      <hspacer id="536e9">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="100" height="25"/>
-          </grid>
-        </constraints>
-      </hspacer>
       <hspacer id="9e7f3">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="100" height="25"/>
           </grid>
         </constraints>
       </hspacer>
       <component id="a9aa4" class="javax.swing.JTextField" binding="textField2">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="40"/>
           </grid>
         </constraints>
@@ -89,7 +82,7 @@
       </component>
       <component id="a8410" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="60" height="40"/>
           </grid>
         </constraints>
@@ -104,7 +97,7 @@
       </component>
       <component id="87db2" class="javax.swing.JButton" binding="cancButton" default-binding="true">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="60" height="40"/>
           </grid>
         </constraints>
@@ -112,6 +105,58 @@
           <background color="-1092784"/>
           <foreground color="-1"/>
           <text value="Canc"/>
+        </properties>
+      </component>
+      <component id="bc22d" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-12961222"/>
+          <enabled value="true"/>
+          <font size="14"/>
+          <foreground color="-1"/>
+          <text value="INSERIRE IL VALORE DA CONVERTIRE:"/>
+        </properties>
+      </component>
+      <hspacer id="536e9">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="100" height="25"/>
+          </grid>
+        </constraints>
+      </hspacer>
+      <component id="add5" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-12961222"/>
+          <font size="14"/>
+          <foreground color="-1"/>
+          <text value="RISULTATO DELLA CONVERSIONE:"/>
+        </properties>
+      </component>
+      <component id="e6926" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-12961222"/>
+          <font size="14"/>
+          <foreground color="-1"/>
+          <text value="DA:"/>
+        </properties>
+      </component>
+      <component id="81db1" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-12961222"/>
+          <font size="14"/>
+          <foreground color="-1"/>
+          <text value="A:"/>
         </properties>
       </component>
     </children>
